[package]
name = "lfx-git"
version = "0.1.0"
authors = [
    "Nathan Fargo <ntfargo@proton.me>",
]
edition = "2021"
license = "GPL-3.0-or-later"
description = "Linear Fox Git"
keywords = ["git", "linear-fox", "lfx"]

[dependencies]
git2 = "^0.17.2"
ring = "^0.16.20"
libp2p = { version = "^0.52.1", features = ["full"] }
tokio = { version = "^1.29.1", features = ["full"] }

[lib]
name = "lfx_git"
test = false